@@ -387,15 +387,15 @@ invisible(.plotDendro(dendro=dend,leafType=leafType,mergeMethod=mergeMethod,merg
   	###############
   	if(max(phyloObj$edge.length)>1e6) phyloObj$edge.length <- phyloObj$edge.length / max(phyloObj$edge.length) 
 		
-	prohibitOptions<-c("tip.color","node.pos","edge.width")
+	prohibitOptions<-c("tip.color","node.pos","edge.width","horizontal","direction","type")
 	if(any(prohibitOptions %in% names(plotArgs))) stop("User cannot set following options to plot.phylo:",paste(prohibitOptions, collapse=","))
 	plotArgs<-c(plotArgs,list(tip.color=tip.color,node.pos=2,edge.width=edge.width))	
   	if(plotType=="name") do.call(ape::plot.phylo,c(list(phyloObj),plotArgs))
   	else{
 		#if colorblock
 		#just calculate:
-  	  if(!"show.tip.label"%in% plotArgs) plotArgs$show.tip.label<-FALSE
-  		phyloPlotOut<-do.call(ape::plot.phylo,c(list(phyloObj,plot=FALSE),plotArgs))
+  	    if(!"show.tip.label"%in% plotArgs) plotArgs$show.tip.label<-FALSE
+  		phyloPlotOut<-do.call(.calculatePlotPhylo,c(list(phyloObj,plot=FALSE),plotArgs))
   		treeWidth<-phyloPlotOut$x.lim[2]
 		#plot dendrogram:
   		do.call(ape::plot.phylo,c(list(phyloObj,x.lim=treeWidth*(1+dataPct)),plotArgs))
@@ -444,4 +444,308 @@ invisible(.plotDendro(dendro=dend,leafType=leafType,mergeMethod=mergeMethod,merg
   	}
 	
   	invisible(phyloObj)
+  }
+
+
+#' @importFrom ape node_height_clado node_height node_depth node_depth_edgelength is.ultrametric
+###Copy code from ape:plot.phylo so get how calculates x.lim. Just removed the plot parts.
+.calculatePlotPhylo<-function (x, type = "phylogram", use.edge.length = TRUE, node.pos = NULL, 
+      show.tip.label = TRUE, show.node.label = FALSE, edge.color = "black", 
+      edge.width = 1, edge.lty = 1, font = 3, cex = par("cex"), 
+      adj = NULL, srt = 0, no.margin = FALSE, root.edge = FALSE, 
+      label.offset = 0, underscore = FALSE, x.lim = NULL, y.lim = NULL, 
+      direction = "rightwards", lab4ut = NULL, tip.color = "black", 
+      plot = TRUE, rotate.tree = 0, open.angle = 0, node.depth = 1, 
+      align.tip.label = FALSE, ...) 
+  {
+      Ntip <- length(x$tip.label)
+      if (Ntip < 2) {
+          warning("found less than 2 tips in the tree")
+          return(NULL)
+      }
+      .nodeHeight <- function(edge, Nedge, yy) .C(ape::node_height, 
+          as.integer(edge[, 1]), as.integer(edge[, 2]), as.integer(Nedge), 
+          as.double(yy))[[4]]
+      .nodeDepth <- function(Ntip, Nnode, edge, Nedge, node.depth) .C(ape::node_depth, 
+          as.integer(Ntip), as.integer(edge[, 1]), as.integer(edge[, 
+              2]), as.integer(Nedge), double(Ntip + Nnode), as.integer(node.depth))[[5]]
+      .nodeDepthEdgelength <- function(Ntip, Nnode, edge, Nedge, 
+          edge.length) .C(ape::node_depth_edgelength, as.integer(edge[, 
+          1]), as.integer(edge[, 2]), as.integer(Nedge), as.double(edge.length), 
+          double(Ntip + Nnode))[[5]]
+      Nedge <- dim(x$edge)[1]
+      Nnode <- x$Nnode
+      if (any(x$edge < 1) || any(x$edge > Ntip + Nnode)) 
+          stop("tree badly conformed; cannot plot. Check the edge matrix.")
+      ROOT <- Ntip + 1
+      type <- match.arg(type, c("phylogram", "cladogram", "fan", 
+          "unrooted", "radial"))
+      direction <- match.arg(direction, c("rightwards", "leftwards", 
+          "upwards", "downwards"))
+      if (is.null(x$edge.length)) {
+          use.edge.length <- FALSE
+      }
+      else {
+          if (use.edge.length && type != "radial") {
+              tmp <- sum(is.na(x$edge.length))
+              if (tmp) {
+                  warning(paste(tmp, "branch length(s) NA(s): branch lengths ignored in the plot"))
+                  use.edge.length <- FALSE
+              }
+          }
+      }
+      if (is.numeric(align.tip.label)) {
+          align.tip.label.lty <- align.tip.label
+          align.tip.label <- TRUE
+      }
+      else {
+          if (align.tip.label) 
+              align.tip.label.lty <- 3
+      }
+      if (align.tip.label) {
+          if (type %in% c("unrooted", "radial") || !use.edge.length || 
+              is.ultrametric(x)) 
+              align.tip.label <- FALSE
+      }
+      if (type %in% c("unrooted", "radial") || !use.edge.length || 
+          is.null(x$root.edge) || !x$root.edge) 
+          root.edge <- FALSE
+      phyloORclado <- type %in% c("phylogram", "cladogram")
+      horizontal <- direction %in% c("rightwards", "leftwards")
+      xe <- x$edge
+      if (phyloORclado) {
+          phyOrder <- attr(x, "order")
+          if (is.null(phyOrder) || phyOrder != "cladewise") {
+              x <- ape:::reorder.phylo(x)
+              if (!identical(x$edge, xe)) {
+                  ereorder <- match(x$edge[, 2], xe[, 2])
+                  if (length(edge.color) > 1) {
+                    edge.color <- rep(edge.color, length.out = Nedge)
+                    edge.color <- edge.color[ereorder]
+                  }
+                  if (length(edge.width) > 1) {
+                    edge.width <- rep(edge.width, length.out = Nedge)
+                    edge.width <- edge.width[ereorder]
+                  }
+                  if (length(edge.lty) > 1) {
+                    edge.lty <- rep(edge.lty, length.out = Nedge)
+                    edge.lty <- edge.lty[ereorder]
+                  }
+              }
+          }
+          yy <- numeric(Ntip + Nnode)
+          TIPS <- x$edge[x$edge[, 2] <= Ntip, 2]
+          yy[TIPS] <- 1:Ntip
+      }
+      z <- ape:::reorder.phylo(x, order = "postorder") ##
+      if (phyloORclado) {
+          if (is.null(node.pos)) 
+              node.pos <- if (type == "cladogram" && !use.edge.length) 
+                  2
+              else 1
+          if (node.pos == 1) 
+              yy <- .nodeHeight(z$edge, Nedge, yy)
+          else {
+              ans <- .C(ape::node_height_clado, as.integer(Ntip), as.integer(z$edge[, 
+                  1]), as.integer(z$edge[, 2]), as.integer(Nedge), 
+                  double(Ntip + Nnode), as.double(yy))
+              xx <- ans[[5]] - 1
+              yy <- ans[[6]]
+          }
+          if (!use.edge.length) {
+              if (node.pos != 2) 
+                  xx <- .nodeDepth(Ntip, Nnode, z$edge, Nedge, 
+                    node.depth) - 1
+              xx <- max(xx) - xx
+          }
+          else {
+              xx <- .nodeDepthEdgelength(Ntip, Nnode, z$edge, Nedge, 
+                  z$edge.length)
+          }
+      }
+      else {
+          twopi <- 2 * pi
+          rotate.tree <- twopi * rotate.tree/360
+          if (type != "unrooted") {
+              TIPS <- x$edge[which(x$edge[, 2] <= Ntip), 2]
+              xx <- seq(0, twopi * (1 - 1/Ntip) - twopi * open.angle/360, 
+                  length.out = Ntip)
+              theta <- double(Ntip)
+              theta[TIPS] <- xx
+              theta <- c(theta, numeric(Nnode))
+          }
+          switch(type, fan = {
+              theta <- .nodeHeight(z$edge, Nedge, theta)
+              if (use.edge.length) {
+                  r <- .nodeDepthEdgelength(Ntip, Nnode, z$edge, 
+                    Nedge, z$edge.length)
+              } else {
+                  r <- .nodeDepth(Ntip, Nnode, z$edge, Nedge, node.depth)
+                  r <- 1/r
+              }
+              theta <- theta + rotate.tree
+              if (root.edge) r <- r + x$root.edge
+              xx <- r * cos(theta)
+              yy <- r * sin(theta)
+          }, unrooted = {
+              nb.sp <- .nodeDepth(Ntip, Nnode, z$edge, Nedge, node.depth)
+              XY <- if (use.edge.length) unrooted.xy(Ntip, Nnode, 
+                  z$edge, z$edge.length, nb.sp, rotate.tree) else unrooted.xy(Ntip, 
+                  Nnode, z$edge, rep(1, Nedge), nb.sp, rotate.tree)
+              xx <- XY$M[, 1] - min(XY$M[, 1])
+              yy <- XY$M[, 2] - min(XY$M[, 2])
+          }, radial = {
+              r <- .nodeDepth(Ntip, Nnode, z$edge, Nedge, node.depth)
+              r[r == 1] <- 0
+              r <- 1 - r/Ntip
+              theta <- .nodeHeight(z$edge, Nedge, theta) + rotate.tree
+              xx <- r * cos(theta)
+              yy <- r * sin(theta)
+          })
+      }
+      if (phyloORclado) {
+          if (!horizontal) {
+              tmp <- yy
+              yy <- xx
+              xx <- tmp - min(tmp) + 1
+          }
+          if (root.edge) {
+              if (direction == "rightwards") 
+                  xx <- xx + x$root.edge
+              if (direction == "upwards") 
+                  yy <- yy + x$root.edge
+          }
+      }
+      if (no.margin) 
+          par(mai = rep(0, 4))
+      if (show.tip.label) 
+          nchar.tip.label <- nchar(x$tip.label)
+      max.yy <- max(yy)
+      getLimit <- function(x, lab, sin, cex) {
+          s <- strwidth(lab, "inches", cex = cex)
+          if (any(s > sin)) 
+              return(1.5 * max(x))
+          Limit <- 0
+          while (any(x > Limit)) {
+              i <- which.max(x)
+              alp <- x[i]/(sin - s[i])
+              Limit <- x[i] + alp * s[i]
+              x <- x + alp * s
+          }
+          Limit
+      }
+      if (is.null(x.lim)) {
+          if (phyloORclado) {
+              if (horizontal) {
+                  xx.tips <- xx[1:Ntip]
+                  if (show.tip.label) {
+                    pin1 <- par("pin")[1]
+                    tmp <- getLimit(xx.tips, x$tip.label, pin1, 
+                      cex)
+                    tmp <- tmp + label.offset
+                  }
+                  else tmp <- max(xx.tips)
+                  x.lim <- c(0, tmp)
+              }
+              else x.lim <- c(1, Ntip)
+          }
+          else switch(type, fan = {
+              if (show.tip.label) {
+                  offset <- max(nchar.tip.label * 0.018 * max.yy * 
+                    cex)
+                  x.lim <- range(xx) + c(-offset, offset)
+              } else x.lim <- range(xx)
+          }, unrooted = {
+              if (show.tip.label) {
+                  offset <- max(nchar.tip.label * 0.018 * max.yy * 
+                    cex)
+                  x.lim <- c(0 - offset, max(xx) + offset)
+              } else x.lim <- c(0, max(xx))
+          }, radial = {
+              if (show.tip.label) {
+                  offset <- max(nchar.tip.label * 0.03 * cex)
+                  x.lim <- c(-1 - offset, 1 + offset)
+              } else x.lim <- c(-1, 1)
+          })
+      }
+      else if (length(x.lim) == 1) {
+          x.lim <- c(0, x.lim)
+          if (phyloORclado && !horizontal) 
+              x.lim[1] <- 1
+          if (type %in% c("fan", "unrooted") && show.tip.label) 
+              x.lim[1] <- -max(nchar.tip.label * 0.018 * max.yy * 
+                  cex)
+          if (type == "radial") 
+              x.lim[1] <- if (show.tip.label) 
+                  -1 - max(nchar.tip.label * 0.03 * cex)
+              else -1
+      }
+      if (phyloORclado && direction == "leftwards") 
+          xx <- x.lim[2] - xx
+      if (is.null(y.lim)) {
+          if (phyloORclado) {
+              if (horizontal) 
+                  y.lim <- c(1, Ntip)
+              else {
+                  pin2 <- par("pin")[2]
+                  yy.tips <- yy[1:Ntip]
+                  if (show.tip.label) {
+                    tmp <- getLimit(yy.tips, x$tip.label, pin2, 
+                      cex)
+                    tmp <- tmp + label.offset
+                  }
+                  else tmp <- max(yy.tips)
+                  y.lim <- c(0, tmp)
+              }
+          }
+          else switch(type, fan = {
+              if (show.tip.label) {
+                  offset <- max(nchar.tip.label * 0.018 * max.yy * 
+                    cex)
+                  y.lim <- c(min(yy) - offset, max.yy + offset)
+              } else y.lim <- c(min(yy), max.yy)
+          }, unrooted = {
+              if (show.tip.label) {
+                  offset <- max(nchar.tip.label * 0.018 * max.yy * 
+                    cex)
+                  y.lim <- c(0 - offset, max.yy + offset)
+              } else y.lim <- c(0, max.yy)
+          }, radial = {
+              if (show.tip.label) {
+                  offset <- max(nchar.tip.label * 0.03 * cex)
+                  y.lim <- c(-1 - offset, 1 + offset)
+              } else y.lim <- c(-1, 1)
+          })
+      }
+      else if (length(y.lim) == 1) {
+          y.lim <- c(0, y.lim)
+          if (phyloORclado && horizontal) 
+              y.lim[1] <- 1
+          if (type %in% c("fan", "unrooted") && show.tip.label) 
+              y.lim[1] <- -max(nchar.tip.label * 0.018 * max.yy * 
+                  cex)
+          if (type == "radial") 
+              y.lim[1] <- if (show.tip.label) 
+                  -1 - max(nchar.tip.label * 0.018 * max.yy * cex)
+              else -1
+      }
+      if (phyloORclado && direction == "downwards") 
+          yy <- y.lim[2] - yy
+      if (phyloORclado && root.edge) {
+          if (direction == "leftwards") 
+              x.lim[2] <- x.lim[2] + x$root.edge
+          if (direction == "downwards") 
+              y.lim[2] <- y.lim[2] + x$root.edge
+      }
+      asp <- if (type %in% c("fan", "radial", "unrooted")) 
+          1
+      else NA
+      L <- list(type = type, use.edge.length = use.edge.length, 
+          node.pos = node.pos, node.depth = node.depth, show.tip.label = show.tip.label, 
+          show.node.label = show.node.label, font = font, cex = cex, 
+          adj = adj, srt = srt, no.margin = no.margin, label.offset = label.offset, 
+          x.lim = x.lim, y.lim = y.lim, direction = direction, 
+          tip.color = tip.color, Ntip = Ntip, Nnode = Nnode, root.time = x$root.time, 
+          align.tip.label = align.tip.label)
+      invisible(L)
   }
